Low-level KafkaMessageListenerContainer implementation -- when we use ConcurrentMessageListenerContainer we need to mannualy start the container -- with this we can set concurrency too

--- a/src/main/resources/kafkaProperties/kafkaProperties.properties
+++ b/src/main/resources/kafkaProperties/kafkaProperties.properties
@@ -16,5 +16,5 @@ kafka.group.id=my-group
 kafka.topic=my-topic
 kafka.concurrency=2
 
-kafka.group.id2 = my-groupB
-kafka.topic2=my-topicB
+kafka.raw.group.id=my-raw-group
+kafka.raw.topic=my-raw-topic
