--- a/src/main/resources/kafkaProperties/kafkaProperties.properties
+++ b/src/main/resources/kafkaProperties/kafkaProperties.properties
@@ -18,3 +18,6 @@ kafka.concurrency=2
 
 kafka.raw.group.id=my-raw-group
 kafka.raw.topic=my-raw-topic
+
+kafka.json.group.id=my-json-group
+kafka.json.topic=my-json-topic
