Kafka-Protobuf integration.

--- a/src/main/resources/kafkaProperties/kafkaProperties.properties
+++ b/src/main/resources/kafkaProperties/kafkaProperties.properties
@@ -1,8 +1,8 @@
-kafka.bootstrap.servers=localhost:9092
+kafka.bootstrap.servers=192.168.135.213:9092
 
 # producer properties
 kafka.acks=1
-kafka.buffer.memory=50000
+kafka.buffer.memory=500000
 kafka.retries=3
 kafka.batch.size=0
 kafka.linger.ms=3000
@@ -12,9 +12,12 @@ kafka.auto.commit.interval.ms=5000
 kafka.session.timeout.ms=7000
 kafka.max.poll.interval.ms=360000
 kafka.max.poll.records=100
-kafka.group.id=my-group
-kafka.topic=my-topic
+kafka.group.id=kafka-group
+kafka.topic=kafka-topic
 kafka.concurrency=2
 
 kafka.group.id2 = my-groupB
 kafka.topic2=my-topicB
+
+kafka.proto.group.id=proto-group
+kafka.proto.topic=proto-topic
