--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ dependencies {
 	compile "org.springframework.kafka:spring-kafka:1.1.2.RELEASE"
 	compile group: 'org.apache.kafka', name: 'kafka-clients', version: '0.10.1.1'
 	compile group:'org.apache.kafka', name: 'kafka_2.11', version: '0.10.1.1'
+	
+	compile 'com.google.protobuf:protobuf-java:3.6.1'
+	compile "com.googlecode.protobuf-java-format:protobuf-java-format:1.4"
+    compile 'com.google.protobuf:protobuf-java-util:3.6.1'
 }
 
 war{
